--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prisma": "^6.9.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "@types/node": "^24.0.3",
     "tsx": "^4.20.3"
   },
   "devDependencies": {
