--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
@@ -31,6 +32,7 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@types/node": "^24.0.3",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.0.1",
     "class-validator": "^0.14.2",
     "prisma": "^6.9.0",
     "reflect-metadata": "^0.2.2",
