--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.1",
     "class-validator": "^0.14.2",
+    "keyv": "^5.3.4",
     "prisma": "^6.9.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
